tests-integration/tests/snapshots/lsp__009_completion_suggestion_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 3, character: 7 }

```
ref = l
--     ^
```

╭─────────┬─────────────────┬─────────────────────┬─────────────┬───────────────┬─────────────┬─────────────────────────╮
│  label  │  label_detail   │  label_description  │  sort_text  │  filter_text  │  text_edit  │  additional_text_edits  │
├─────────┼─────────────────┼─────────────────────┼─────────────┼───────────────┼─────────────┼─────────────────────────┤
│  life   │   (import Lib)  │  Lib                │  Lib.life   │  life         │  3:6..3:7   │  1:0..1:0               │
│         │                 │                     │             │               │  life       │  import Lib (life)      │
╰─────────┴─────────────────┴─────────────────────┴─────────────┴───────────────┴─────────────┴─────────────────────────╯


Completion at Position { line: 6, character: 24 }

```
just :: forall a. a -> M
--                      ^
```

╭─────────┬──────────────────────┬─────────────────────┬────────────────┬───────────────┬──────────────┬───────────────────────────────╮
│  label  │  label_detail        │  label_description  │  sort_text     │  filter_text  │  text_edit   │  additional_text_edits        │
├─────────┼──────────────────────┼─────────────────────┼────────────────┼───────────────┼──────────────┼───────────────────────────────┤
│  Mul    │   (import Prim.Int)  │  Prim.Int           │  Prim.Int.Mul  │  Mul          │  6:23..6:24  │  1:0..1:0                     │
│         │                      │                     │                │               │  Mul         │  import Prim.Int (class Mul)  │
├─────────┼──────────────────────┼─────────────────────┼────────────────┼───────────────┼──────────────┼───────────────────────────────┤
│  Maybe  │   (import Lib)       │  Lib                │  Lib.Maybe     │  Maybe        │  6:23..6:24  │  1:0..1:0                     │
│         │                      │                     │                │               │  Maybe       │  import Lib (Maybe)           │
╰─────────┴──────────────────────┴─────────────────────┴────────────────┴───────────────┴──────────────┴───────────────────────────────╯


Completion at Position { line: 8, character: 8 }

```
just = J
--      ^
```

╭─────────┬─────────────────┬─────────────────────┬─────────────┬───────────────┬─────────────┬──────────────────────────╮
│  label  │  label_detail   │  label_description  │  sort_text  │  filter_text  │  text_edit  │  additional_text_edits   │
├─────────┼─────────────────┼─────────────────────┼─────────────┼───────────────┼─────────────┼──────────────────────────┤
│  Just   │   (import Lib)  │  Lib                │  Lib.Just   │  Just         │  8:7..8:8   │  1:0..1:0                │
│         │                 │                     │             │               │  Just       │  import Lib (Maybe(..))  │
╰─────────┴─────────────────┴─────────────────────┴─────────────┴───────────────┴─────────────┴──────────────────────────╯


Completion at Position { line: 11, character: 22 }

```
nothing :: forall a. M
--                    ^
```

╭─────────┬──────────────────────┬─────────────────────┬────────────────┬───────────────┬────────────────┬───────────────────────────────╮
│  label  │  label_detail        │  label_description  │  sort_text     │  filter_text  │  text_edit     │  additional_text_edits        │
├─────────┼──────────────────────┼─────────────────────┼────────────────┼───────────────┼────────────────┼───────────────────────────────┤
│  Mul    │   (import Prim.Int)  │  Prim.Int           │  Prim.Int.Mul  │  Mul          │  11:21..11:22  │  1:0..1:0                     │
│         │                      │                     │                │               │  Mul           │  import Prim.Int (class Mul)  │
├─────────┼──────────────────────┼─────────────────────┼────────────────┼───────────────┼────────────────┼───────────────────────────────┤
│  Maybe  │   (import Lib)       │  Lib                │  Lib.Maybe     │  Maybe        │  11:21..11:22  │  1:0..1:0                     │
│         │                      │                     │                │               │  Maybe         │  import Lib (Maybe)           │
╰─────────┴──────────────────────┴─────────────────────┴────────────────┴───────────────┴────────────────┴───────────────────────────────╯


Completion at Position { line: 13, character: 11 }

```
nothing = N
--         ^
```

╭───────────┬─────────────────┬─────────────────────┬───────────────┬───────────────┬────────────────┬──────────────────────────╮
│  label    │  label_detail   │  label_description  │  sort_text    │  filter_text  │  text_edit     │  additional_text_edits   │
├───────────┼─────────────────┼─────────────────────┼───────────────┼───────────────┼────────────────┼──────────────────────────┤
│  Nothing  │   (import Lib)  │  Lib                │  Lib.Nothing  │  Nothing      │  13:10..13:11  │  1:0..1:0                │
│           │                 │                     │               │               │  Nothing       │  import Lib (Maybe(..))  │
╰───────────┴─────────────────┴─────────────────────┴───────────────┴───────────────┴────────────────┴──────────────────────────╯


Completion at Position { line: 16, character: 8 }

```
cls :: C
--      ^
```

╭──────────────┬──────────────────────────┬─────────────────────┬─────────────────────────┬───────────────┬──────────────┬────────────────────────────────────────╮
│  label       │  label_detail            │  label_description  │  sort_text              │  filter_text  │  text_edit   │  additional_text_edits                 │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Char        │   ...                    │  Prim               │  Char                   │  Char         │  16:7..16:8  │  ...                                   │
│              │                          │                     │                         │               │  Char        │                                        │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Constraint  │   ...                    │  Prim               │  Constraint             │  Constraint   │  16:7..16:8  │  ...                                   │
│              │                          │                     │                         │               │  Constraint  │                                        │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Coercible   │   (import Prim.Coerce)   │  Prim.Coerce        │  Prim.Coerce.Coercible  │  Coercible    │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Coercible   │  import Prim.Coerce (class Coercible)  │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Compare     │   (import Prim.Int)      │  Prim.Int           │  Prim.Int.Compare       │  Compare      │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Compare     │  import Prim.Int (class Compare)       │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Cons        │   (import Prim.Row)      │  Prim.Row           │  Prim.Row.Cons          │  Cons         │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Cons        │  import Prim.Row (class Cons)          │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Cons        │   (import Prim.RowList)  │  Prim.RowList       │  Prim.RowList.Cons      │  Cons         │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Cons        │  import Prim.RowList (Cons)            │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Cons        │   (import Prim.Symbol)   │  Prim.Symbol        │  Prim.Symbol.Cons       │  Cons         │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Cons        │  import Prim.Symbol (class Cons)       │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Compare     │   (import Prim.Symbol)   │  Prim.Symbol        │  Prim.Symbol.Compare    │  Compare      │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Compare     │  import Prim.Symbol (class Compare)    │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  Cons        │   (import Lib)           │  Lib                │  Lib.Cons               │  Cons         │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  Cons        │  import Lib (Cons)                     │
├──────────────┼──────────────────────────┼─────────────────────┼─────────────────────────┼───────────────┼──────────────┼────────────────────────────────────────┤
│  ClassName   │   (import Lib)           │  Lib                │  Lib.ClassName          │  ClassName    │  16:7..16:8  │  1:0..1:0                              │
│              │                          │                     │                         │               │  ClassName   │  import Lib (class ClassName)          │
╰──────────────┴──────────────────────────┴─────────────────────┴─────────────────────────┴───────────────┴──────────────┴────────────────────────────────────────╯
