tests-integration/tests/snapshots/lsp__010_completion_qualified_suggestion_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 3, character: 12 }

[
    CompletionItem {
        label: "plus",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 7,
                        },
                        end: Position {
                            line: 3,
                            character: 12,
                        },
                    },
                    new_text: "Lib.plus",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TermItem": Array [
                    Number(0),
                    Number(3),
                ],
            },
        ),
        tags: None,
    },
    CompletionItem {
        label: "life",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 7,
                        },
                        end: Position {
                            line: 3,
                            character: 12,
                        },
                    },
                    new_text: "Lib.life",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TermItem": Array [
                    Number(0),
                    Number(0),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 6, character: 29 }

[
    CompletionItem {
        label: "Maybe",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Struct,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 6,
                            character: 24,
                        },
                        end: Position {
                            line: 6,
                            character: 29,
                        },
                    },
                    new_text: "Lib.Maybe",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TypeItem": Array [
                    Number(0),
                    Number(0),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 8, character: 13 }

[
    CompletionItem {
        label: "Just",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 8,
                            character: 8,
                        },
                        end: Position {
                            line: 8,
                            character: 13,
                        },
                    },
                    new_text: "Lib.Just",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TermItem": Array [
                    Number(0),
                    Number(1),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 11, character: 26 }

[
    CompletionItem {
        label: "Maybe",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Struct,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 11,
                            character: 22,
                        },
                        end: Position {
                            line: 11,
                            character: 27,
                        },
                    },
                    new_text: "Lib.Maybe",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TypeItem": Array [
                    Number(0),
                    Number(0),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 13, character: 15 }

[
    CompletionItem {
        label: "Just",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 13,
                            character: 11,
                        },
                        end: Position {
                            line: 13,
                            character: 16,
                        },
                    },
                    new_text: "Lib.Just",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TermItem": Array [
                    Number(0),
                    Number(1),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 16, character: 12 }

[
    CompletionItem {
        label: "Cons",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Struct,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 16,
                            character: 8,
                        },
                        end: Position {
                            line: 16,
                            character: 13,
                        },
                    },
                    new_text: "Lib.Cons",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TypeItem": Array [
                    Number(0),
                    Number(1),
                ],
            },
        ),
        tags: None,
    },
    CompletionItem {
        label: "ClassName",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Lib as Lib)",
                ),
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Struct,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Lib",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 16,
                            character: 8,
                        },
                        end: Position {
                            line: 16,
                            character: 13,
                        },
                    },
                    new_text: "Lib.ClassName",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Lib as Lib\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TypeItem": Array [
                    Number(0),
                    Number(3),
                ],
            },
        ),
        tags: None,
    },
]


Completion at Position { line: 21, character: 20 }

[
    CompletionItem {
        label: "just",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " (import Data.Maybe as Data.Maybe)",
                ),
                description: Some(
                    "Data.Maybe",
                ),
            },
        ),
        kind: Some(
            Value,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: Some(
            "Data.Maybe",
        ),
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 21,
                            character: 8,
                        },
                        end: Position {
                            line: 21,
                            character: 20,
                        },
                    },
                    new_text: "Data.Maybe.just",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "import Data.Maybe as Data.Maybe\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: Some(
            Object {
                "TermItem": Array [
                    Number(2),
                    Number(0),
                ],
            },
        ),
        tags: None,
    },
]
