tests-integration/tests/snapshots/lsp__011_completion_module_name_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 2, character: 7 }

[
    CompletionItem {
        label: "Lib",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Module,
        ),
        detail: Some(
            "module Lib where",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Main",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Main",
                ),
            },
        ),
        kind: Some(
            Module,
        ),
        detail: Some(
            "module Main where",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Data.Maybe",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Data.Maybe",
                ),
            },
        ),
        kind: Some(
            Module,
        ),
        detail: Some(
            "module Data.Maybe where",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]


Completion at Position { line: 4, character: 8 }

[
    CompletionItem {
        label: "Lib",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Lib",
                ),
            },
        ),
        kind: Some(
            Module,
        ),
        detail: Some(
            "module Lib where",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 4,
                            character: 7,
                        },
                        end: Position {
                            line: 4,
                            character: 8,
                        },
                    },
                    new_text: "Lib",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]


Completion at Position { line: 6, character: 12 }

[
    CompletionItem {
        label: "Data.Maybe",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "Data.Maybe",
                ),
            },
        ),
        kind: Some(
            Module,
        ),
        detail: Some(
            "module Data.Maybe where",
        ),
        documentation: Some(
            MarkupContent(
                MarkupContent {
                    kind: Markdown,
                    value: "",
                },
            ),
        ),
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 6,
                            character: 7,
                        },
                        end: Position {
                            line: 6,
                            character: 12,
                        },
                    },
                    new_text: "Data.Maybe",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
