tests-integration/tests/snapshots/lsp__012_completion_edit_import_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 4, character: 9 }

```
value = r
--       ^
```

╭─────────┬─────────────────┬─────────────────────┬──────────────────────────╮
│  label  │  label_detail   │  label_description  │  additional_text_edits   │
├─────────┼─────────────────┼─────────────────────┼──────────────────────────┤
│  ref    │   (import Lib)  │  Lib                │  2:0 .. 2:17             │
│         │                 │                     │  import Lib (life, ref)  │
╰─────────┴─────────────────┴─────────────────────┴──────────────────────────╯
