tests-integration/tests/snapshots/lsp__013_completion_bad_cst_main.snap
---
source: tests-integration/tests/lsp.rs
expression: report
---
Completion at Position { line: 3, character: 23 }

```
data Maybe a = Just a |
--                     ^
```

╭─────────┬────────────────┬─────────────────────┬─────────────┬───────────────┬─────────────┬─────────────────────────╮
│  label  │  label_detail  │  label_description  │  sort_text  │  filter_text  │  text_edit  │  additional_text_edits  │
╰─────────┴────────────────┴─────────────────────┴─────────────┴───────────────┴─────────────┴─────────────────────────╯
